# nlp-fun

./: .gitignore  pyproject.toml
input/: config.toml  config_colab.toml
source/: config.py  main_dev.py
source/ml/: data.py  train.py  train_fine_tune.py  train_scratch.py  utils.py
source/ml/data/: custom.py
source/ml/datasets/: __init__.py  base.py  dynasent.py  sst.py  tatoeba.py
source/ml/models/: __init__.py  base.py  bengio2003.py  sentiment.py
source/ml/models/machine_translation/: __init__.py  model.py  trainer.py
source/ml/models/sentiment/: __init__.py  data.py  model.py  trainer.py
source/ml/models/tokenizer/: __init__.py  model.py  trainer.py
