[tool.poetry]
name = "nlp-fun"
version = "0.1.0"
description = "NLP Fun"
authors = ["Bertan Günyel <bertan.gunyel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11.3"
numpy = "^1.26.3"
pandas = "^2.2.2"
pydantic-settings = "^2.4.0"
matplotlib = "^3.9.2"

torch = { url = "https://download.pytorch.org/whl/cu121/torch-2.1.2%2Bcu121-cp311-cp311-linux_x86_64.whl"}
torchaudio = { url = "https://download.pytorch.org/whl/cu121/torchaudio-2.1.2%2Bcu121-cp311-cp311-linux_x86_64.whl"}
torchvision = { url = "https://download.pytorch.org/whl/cu121/torchvision-0.16.2%2Bcu121-cp311-cp311-linux_x86_64.whl"}
tiktoken = "^0.7.0"
tqdm = "^4.66.5"
datasets = "^3.0.1"
transformers = "^4.45.1"
tomlkit = "^0.13.2"
scikit-learn = "^1.5.2"
scipy = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
